<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:gravity="center_horizontal"
    android:orientation="vertical" android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.mobile.tradesies.registration.RegistrationSelectionActivity"
    android:background="@color/windowBackgroundColor">

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/join_tradesies"
        android:gravity="center_horizontal"
        android:layout_margin="20dip"
        android:textColor="@color/abc_primary_text_material_light"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Headline" />

    <com.facebook.login.widget.LoginButton
        android:id="@+id/btn_register_facebook"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dip"
        android:text="@string/reg_with_facebook"/>

    <Button
        android:id="@+id/btn_register_twitter"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@color/twitter_blue"
        android:layout_margin="10dip"
        android:text="@string/reg_with_twitter"/>

    <Button
        android:id="@+id/btn_register_google_plus"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@color/google_plus_orange"
        android:layout_margin="10dip"
        android:text="@string/reg_with_google_plus"/>

    <Button
        android:id="@+id/btn_register_manual"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@color/tradesiesColorSecondaryWeak"
        android:layout_margin="10dip"
        android:text="@string/reg_manually"/>

    <LinearLayout
        android:layout_marginTop="50dp"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/have_an_account"
            android:textColor="@color/material_blue_grey_800"/>

        <TextView
            android:id="@+id/lnk_log_in_from_registration"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/hyperlink_blue"
            android:text="@string/log_in_here"
            android:layout_marginLeft="10dp" />

    </LinearLayout>

</LinearLayout>



