<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:custom="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/windowBackgroundColor"
    tools:context="com.mobile.tradesies.item.ItemDetailActivity"
    android:orientation="vertical">

    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar"/>

    <ListView
        android:id="@+id/lv_item_trades"
        android:layout_width="fill_parent"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_height="wrap_content">

    </ListView>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp">

            <com.daimajia.slider.library.SliderLayout
                    android:id="@+id/slider"
                    android:transitionName="@string/transition"
                    android:layout_width="match_parent"
                    android:layout_height="300dp"
                    custom:auto_cycle="false" />

            <com.daimajia.slider.library.Indicators.PagerIndicator
                android:id="@+id/custom_indicator"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                custom:selected_color="@color/tradesiesColorPrimaryDark"
                custom:unselected_color="@color/tradesiesColorPrimaryWeak"
                custom:shape="oval"
                custom:selected_padding_left="5dp"
                custom:selected_padding_right="5dp"
                custom:unselected_padding_left="5dp"
                custom:unselected_padding_right="5dp"
                android:layout_centerHorizontal="true"
                android:layout_alignParentBottom="true"
                custom:selected_width="8dp"
                custom:selected_height="8dp"
                custom:unselected_width="8dp"
                custom:unselected_height="8dp"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="20dp"
                />

            <RelativeLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content">

                <com.pkmmte.view.CircularImageView
                    android:id="@+id/item_owner_photo"
                    android:layout_height="64dip"
                    android:layout_width="64dip"
                    custom:border="true"
                    custom:border_color="#EEEEEE"
                    custom:border_width="2dp"
                    custom:shadow="true"
                    android:layout_marginRight="10dp" />

                <TextView
                    android:id="@+id/lbl_item_title"
                    android:textColor="@color/hint_foreground_material_light"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/debug_item_title"
                    android:layout_toRightOf="@+id/item_owner_photo"
                    android:textSize="14pt" />

                <TextView
                    android:id="@+id/lnk_item_distance"
                    android:textColor="#0000FF"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/debug_item_distance"
                    android:layout_toRightOf="@+id/item_owner_photo"
                    android:layout_below="@+id/lbl_item_title"
                    android:textSize="10pt"
                    android:layout_marginLeft="10dp" />

        </RelativeLayout>

        <TextView
            android:id="@+id/lbl_item_description"
            android:textColor="@color/hint_foreground_material_light"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/debug_item_description"
            android:layout_marginTop="10dp"/>

        <Button
            android:id="@+id/btn_propose_trade"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@color/tradesiesColorPrimary"
            android:layout_marginTop="20dip"
            android:text="@string/propose_trade"/>

        <TextView
            android:id="@+id/lnk_report_item"
            android:text="@string/report"
            android:textColor="#0000FF"
            android:layout_width="fill_parent"
            android:layout_gravity="center_horizontal"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp" />
        </LinearLayout>
    </ScrollView>

</LinearLayout>